--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <section class="home">
     <div class="img"></div>
   <div class="center">
-    <div class="title">FOCUS EDUMATICS <br> TEAM - SUMAJYOTHI DEVAPUJALA</i></div>
+    <div class="title">FOCUS EDUMATICS</i></div>
     <div class="sub_title"></div>
     <div class="btns">
     </div>
