--- a/index.html
+++ b/index.html
@@ -84,33 +84,33 @@
       <div class="pos cont" style="background-color: #f4ad49; height: auto; min-height: 80vh;">
         <h1>Positive Comments</h1>
         <div class="content commOne">
-          <div class="commOne">
+          <div class="commOne1">
             <h2 id="tutorOne" class="white"></h2>
-            <h2 id="commOne" class="width"></h2>
+            <h2 id="commOne" class="width-dup"></h2>
           </div>
-          <div class="commOne">
+          <div class="commOne1">
             <h2 id="tutorTwo" class="white"></h2>
-            <h2 id="commTwo" class="width"></h2>
+            <h2 id="commTwo" class="width-dup"></h2>
           </div>
-          <div class="commOne">
+          <div class="commOne1">
             <h2 id="tutorThree" class="white"></h2>
-            <h2 id="commThree" class="width"></h2>
+            <h2 id="commThree" class="width-dup"></h2>
           </div>
-          <div class="commOne">
+          <div class="commOne1">
             <h2 id="tutorFour" class="white"></h2>
-            <h2 id="commFour" class="width"></h2>
+            <h2 id="commFour" class="width-dup"></h2>
           </div>
-          <div class="commOne">
+          <div class="commOne1">
             <h2 id="tutorFive" class="white"></h2>
-            <h2 id="commFive" class="width"></h2>
+            <h2 id="commFive" class="width-dup"></h2>
           </div>
           <div class="commOne">
             <h2 id="tutorSix" class="white"></h2>
-            <h2 id="commSix" class="width"></h2>
+            <h2 id="commSix" class="width-dup"></h2>
           </div>
           <div class="commOne">
             <h2 id="tutorSeven" class="white"></h2>
-            <h2 id="commSeven" class="width"></h2>
+            <h2 id="commSeven" class="width-dup"></h2>
           </div>
         </div>
       </div>
@@ -129,22 +129,22 @@
       </div>
       <div class="id" id="edit"></div>
       <div class="edit cont" id="edit">
-        <div class="kpi-edit main-edit">
-          <input type="text" id="countA" placeholder="Session Count">
-          <input type="text" id="odA" placeholder="On Demand">
-          <input type="text" id="swtA" placeholder="Average Student Wait Time">
-          <input type="text" id="trtA" placeholder="Average Tutor Response Time">
-          <input type="text" id="fqltA" placeholder="Average First Question Load Time">
-          <input type="text" id="trA" placeholder="Tutor Rating">
-          <input type="text" id="srA" placeholder="Session Rating">
+        <div class=" main-edit">
+          <input type="number" id="countA" placeholder="Session Count">
+          <input type="number" id="odA" placeholder="On Demand">
+          <input type="number" id="swtA" placeholder="Average Student Wait Time">
+          <input type="number" id="trtA" placeholder="Average Tutor Response Time">
+          <input type="number" id="fqltA" placeholder="Average First Question Load Time">
+          <input type="number" id="trA" placeholder="Tutor Rating">
+          <input type="number" id="srA" placeholder="Session Rating">
         </div>
 
-        <div class="occu-edit main-edit">
-          <input type="text" id="occuOne" placeholder="Tutor-1">
-          <input type="text" id="occuTwo" placeholder="Tutor-2">
-          <input type="text" id="occuThree" placeholder="Tutor-3">
-          <input type="text" id="occuFour" placeholder="Tutor-4">
-          <input type="text" id="occuFive" placeholder="Tutor-5">
+        <div class=" main-edit">
+          <input type="text" id="occuOne" placeholder="Occupancy Tutor-1">
+          <input type="text" id="occuTwo" placeholder="Occupancy Tutor-2">
+          <input type="text" id="occuThree" placeholder="Occupancy Tutor-3">
+          <input type="text" id="occuFour" placeholder="Occupancy Tutor-4">
+          <input type="text" id="occuFive" placeholder="Occupancy Tutor-5">
         </div>
 
         <div class="main-edit pos-comm">
